...
    android:gravity="start|center_vertical"
    android:text="@string/initial_directory_label"
    android:textAppearance="@style/primary_text_appearance"
    android:textStyle="normal" />

  <EditText
    android:id="@+id/input_name_dialog_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textSize="@dimen/primary_text_size"
    android:textStyle="normal"
    android:layout_marginBottom="@dimen/extra_large_margin"
    android:layout_marginStart="@dimen/extra_large_margin"
...
